Fix bug project grid item background color not showing in IE11

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -320,7 +320,7 @@ body {
     }
 
   .project-grid__item {
-    background-color: lightgrey;
+    background-color: #D3D3D3;
     padding: 20px;
     width: auto;
     min-height: auto;
