--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   --secondary-color: #e0b354;
   --dark-grey: #2b2b2b;
   --white: #ffffff;
-  --light-grey: lightgrey;
+  --light-grey: #D3D3D3;
   --font-weight-heading: 700;
   --text-decoration-none: none;
 }
